# ai-skills

./: README.md  install.py  manifest.json  pyproject.toml  update.py
.agents/skills/apex/: update.py
.agents/skills/apex/App-Architecture/: SKILL.md
.agents/skills/apex/Code-Review/: SKILL.md
.agents/skills/apex/Debug-and-Fix/: SKILL.md
.agents/skills/apex/Dependency-and-Packages/: SKILL.md
.agents/skills/apex/Pre-Deploy-Check/: SKILL.md
.agents/skills/apex/Security-Review/: SKILL.md
.agents/skills/apex/Template-Skill/: SKILL.md
.agents/skills/apex/UI-Design/: SKILL.md
src/apex_ai_skills/: __init__.py  cli.py  constants.py  fetch.py  install.py  status.py  update.py
