[project]
name = "apex-ai-skills"
version = "1.0.0"
description = "Install and update Town of Apex AI agent skills for Cursor projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "packaging>=24.0",
    "requests>=2.31",
]

[project.scripts]
apex-skills = "apex_ai_skills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_ai_skills"]
